making progress with lab 3

--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -51,7 +51,7 @@
                             Start Exam
                           </button>
                         <div id="collapseContent{{lesson.id}}" class="collapse"> 
-                            <form id="questionform" action="point to a submit view" method="post">
+                            <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
                                 {% for question in lesson.question_set.all %}
                                 <div class="card mt-1">
                                     <div class="card-header"><h5>{{ question.question_text}}</h5></div>
@@ -60,9 +60,9 @@
                                         {% for choice in question.choice_set.all %} 
                                         <div class="form-check">
                                             <label class="form-check-label">
-                                                <input type="checkbox" name="choice_{{choice.id}}"
+                                                <input type="checkbox" name="submitted_answers"
                                                        class="form-check-input" id="{{choice.id}}"
-                                                       value="{{choice.id}}">{{ choice.choice }}
+                                                       value="{{ choice.choice }}">{{ choice.choice }}
                                             </label>
                                         </div>
                                         {% endfor %}
