--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,11 +38,11 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <p>Yay you passed!</p>
+       <p>Yay you passed! {{ grade }}</p>
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <p>FAILURE!</p>
+            <p>FAILURE! {{ grade }}</p>
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
@@ -53,7 +53,17 @@
         <div class="card mt-1">
             <div class="card-header"><h5 style="font-weight:bold">{{ question.question_text}}</h5></div>
             <div class="form-group">
-            
+                {% for choice in question.choice_set.all %}
+                    {% if choice.is_correct == True %}
+                        <div> 
+                            <label class="alert alert-success"> {{choice.choice_content}} </label>
+                        </div>
+                    {% else %}
+                        <div>
+                            <label> {{choice.choice_content}} </label>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
         {% endfor %}
